--- a/index.html
+++ b/index.html
@@ -18,5 +18,7 @@
     <div class="game-over-screen">
 
     </div>
+    <script type="text/javascript" src="./src/game.js"></script>
+    <script type="text/javascript" src="./src/main.js"></script>
 </body>
 </html>
