--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Winter-hoot</title>
+    <link rel="stylesheet" href="./public/stylesheets/layout.css">
+    <link rel="stylesheet" href="./public/stylesheets/navbar.css">
 </head>
 <body>
     <div class="navbar">
-        
+        <div class="bar-icon" onclick="openNav()">&#9776;</div>
+        <div class="title">Winter-hoot</div>
     </div>
     <div class="landing-page">
 
