--- a/index.html
+++ b/index.html
@@ -2,12 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
+        integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Winter-hoot</title>
     <link rel="stylesheet" href="./public/stylesheets/layout.css">
     <link rel="stylesheet" href="./public/stylesheets/navbar.css">
 </head>
 <body>
+    <div id="mySidenav" class="sidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <a href="https://winfredhuang.com/" target="_blank">Winfred Huang</a>
+        <a href="https://www.linkedin.com/in/winfred-huang/" target="_blank">LinkedIn</a>
+        <a href="https://github.com/winterfreddy" target="_blank">Github</a>
+    </div>
     <div class="navbar">
         <div class="bar-icon" onclick="openNav()">&#9776;</div>
         <div class="title">Winter-hoot</div>
