Added simple landing page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Winter-hoot</title>
     <link rel="stylesheet" href="./public/stylesheets/layout.css">
     <link rel="stylesheet" href="./public/stylesheets/navbar.css">
+    <link rel="stylesheet" href="./public/stylesheets/landing.css">
 </head>
 <body>
     <div id="mySidenav" class="sidenav">
@@ -21,7 +22,13 @@
         <div class="title">Winter-hoot</div>
     </div>
     <div class="landing-page">
-
+        <div class="landing-modal">
+            <i class="fas fa-snowman"></i>
+            <div class="right-section">
+                <div>Hey Snowflake. Ready to get quizzed?</div>
+                <button>Let's go!</button>
+            </div>
+        </div>
     </div>
     <div class="game-screen">
 
