--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
         integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Winter-hoot</title>
+    <title>Fly-hoot</title>
     <link rel="stylesheet" href="./public/stylesheets/layout.css">
     <link rel="stylesheet" href="./public/stylesheets/navbar.css">
     <link rel="stylesheet" href="./public/stylesheets/landing.css">
@@ -19,15 +19,15 @@
     </div>
     <div class="navbar">
         <div class="bar-icon" onclick="openNav()">&#9776;</div>
-        <div class="title">Winter-hoot</div>
+        <div class="title">Fly-hoot</div>
     </div>
     <div class="landing-page">
         <div class="landing-modal">
-            <i class="fas fa-snowman"></i>
             <div class="right-section">
-                <div>Hey Snowflake. Ready to get quizzed?</div>
-                <button>Let's go!</button>
+                <div>Hey there! Ready to fly through this trivia?</div>
+                <button>Let's fly!</button>
             </div>
+            <i class="fas fa-paper-plane"></i>
         </div>
     </div>
     <div class="game-screen">
