Adjust button styling to start game

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="landing-modal">
             <div class="right-section">
                 <div>Hey there! Ready to fly through this trivia?</div>
-                <button>Let's fly!</button>
+                <button class="startGame" onclick="startGame()">Let's fly!</button>
             </div>
             <i class="fas fa-paper-plane"></i>
         </div>
