--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <div class="landing-modal">
             <div class="right-section">
                 <div>Hey there! Ready to fly through this trivia?</div>
+                <div>There will be 10 random questions when you're ready for takeoff.</div>
                 <button class="startGame" onclick="startGame()">Let's fly!</button>
             </div>
             <i class="fas fa-paper-plane"></i>
