Show question cards

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./public/stylesheets/layout.css">
     <link rel="stylesheet" href="./public/stylesheets/navbar.css">
     <link rel="stylesheet" href="./public/stylesheets/landing.css">
+    <link rel="stylesheet" href="./public/stylesheets/game.css">
 </head>
 <body>
     <div id="mySidenav" class="sidenav">
@@ -32,7 +33,34 @@
         </div>
     </div>
     <div class="game-screen">
-
+        <div class="game-header">
+            <i class="far fa-paper-plane"></i>
+            <h3 class="num-question"></h3>
+        </div>
+        <h2 class="question-prompt"></h2>
+        <div>
+            <label class="container">
+                <div class="c1"></div>
+                <input type="radio" name="radio">
+                <span class="checkmark"></span>
+            </label>
+            <label class="container">
+                <div class="c2"></div>
+                <input type="radio" name="radio">
+                <span class="checkmark"></span>
+            </label>
+            <label class="container">
+                <div class="c3"></div>
+                <input type="radio" name="radio">
+                <span class="checkmark"></span>
+            </label>
+            <label class="container">
+                <div class="c4"></div>
+                <input type="radio" name="radio">
+                <span class="checkmark"></span>
+            </label>
+        </div>
+        <button>Check</button>
     </div>
     <div class="game-over-screen">
 
