stylized game modal

--- a/index.html
+++ b/index.html
@@ -33,34 +33,37 @@
         </div>
     </div>
     <div class="game-screen">
-        <div class="game-header">
-            <i class="far fa-paper-plane"></i>
-            <h3 class="num-question"></h3>
+        <div class="game-modal">
+            <div class="game-header">
+                <i class="far fa-paper-plane"></i>
+                <h3 class="num-question"></h3>
+                <i class="far fa-paper-plane"></i>
+            </div>
+            <h2 class="question-prompt"></h2>
+            <div>
+                <label class="container">
+                    <div class="c1"></div>
+                    <input type="radio" name="radio" id="c1">
+                    <span class="checkmark"></span>
+                </label>
+                <label class="container">
+                    <div class="c2"></div>
+                    <input type="radio" name="radio" id="c2">
+                    <span class="checkmark"></span>
+                </label>
+                <label class="container">
+                    <div class="c3"></div>
+                    <input type="radio" name="radio" id="c3">
+                    <span class="checkmark"></span>
+                </label>
+                <label class="container">
+                    <div class="c4"></div>
+                    <input type="radio" name="radio" id="c4">
+                    <span class="checkmark"></span>
+                </label>
+            </div>
+            <button>Check</button>
         </div>
-        <h2 class="question-prompt"></h2>
-        <div>
-            <label class="container">
-                <div class="c1"></div>
-                <input type="radio" name="radio">
-                <span class="checkmark"></span>
-            </label>
-            <label class="container">
-                <div class="c2"></div>
-                <input type="radio" name="radio">
-                <span class="checkmark"></span>
-            </label>
-            <label class="container">
-                <div class="c3"></div>
-                <input type="radio" name="radio">
-                <span class="checkmark"></span>
-            </label>
-            <label class="container">
-                <div class="c4"></div>
-                <input type="radio" name="radio">
-                <span class="checkmark"></span>
-            </label>
-        </div>
-        <button>Check</button>
     </div>
     <div class="game-over-screen">
 
