refactored prompted question

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <span class="checkmark"></span>
                 </label>
             </div>
-            <button>Check</button>
+            <button onclick="handleQuestion()">Check</button>
         </div>
     </div>
     <div class="game-over-screen">
