handle answer parsing

--- a/index.html
+++ b/index.html
@@ -41,28 +41,28 @@
             </div>
             <h2 class="question-prompt"></h2>
             <div>
-                <label class="container">
+                <label class="container cbkg1">
                     <div class="c1"></div>
                     <input type="radio" name="radio" id="c1">
                     <span class="checkmark"></span>
                 </label>
-                <label class="container">
+                <label class="container cbkg2">
                     <div class="c2"></div>
                     <input type="radio" name="radio" id="c2">
                     <span class="checkmark"></span>
                 </label>
-                <label class="container">
+                <label class="container cbkg3">
                     <div class="c3"></div>
                     <input type="radio" name="radio" id="c3">
                     <span class="checkmark"></span>
                 </label>
-                <label class="container">
+                <label class="container cbkg4">
                     <div class="c4"></div>
                     <input type="radio" name="radio" id="c4">
                     <span class="checkmark"></span>
                 </label>
             </div>
-            <button onclick="handleQuestion()">Check</button>
+            <button onclick="handleAnswer()">Check</button>
         </div>
     </div>
     <div class="game-over-screen">
