--- a/index.html
+++ b/index.html
@@ -66,7 +66,14 @@
         </div>
     </div>
     <div class="game-over-screen">
-
+        <div class="end-game-modal">
+            <i class="fas fa-map-marked-alt"></i>
+            <div class="right-section">
+                <div>You made it!</div>
+                <div>Your score is: <div class="score"></div></div>
+                <button class="restartGame" onclick="">Let's fly again!</button>
+            </div>
+        </div>
     </div>
     <script type="text/javascript" src="./src/game.js"></script>
     <script type="text/javascript" src="./src/main.js"></script>
