Added functionality to restart game

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="right-section">
                 <div>You made it!</div>
                 <div>Your score is: <div class="score"></div></div>
-                <button class="restartGame" onclick="">Let's fly again!</button>
+                <button class="restartGame" onclick="startGame()">Let's fly again!</button>
             </div>
         </div>
     </div>
