Display error if user has not selected an answer

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                     <span class="checkmark"></span>
                 </label>
             </div>
+            <div class="warning">Please select an answer.</div>
             <button onclick="handleAnswer()">Check</button>
         </div>
     </div>
