Adjust content for mobile use

--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
             <i class="fas fa-map-marked-alt"></i>
             <div class="right-section">
                 <div>You made it!</div>
-                <div>Your score is: <div class="score"></div></div>
+                <div>Your score is:</div>
+                <div class="score"></div>
                 <button class="restartGame" onclick="startGame()">Let's fly again!</button>
             </div>
         </div>
