Stylized the submit button

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </label>
             </div>
             <div class="warning">Please select an answer.</div>
-            <button onclick="handleAnswer()">Check</button>
+            <button class="nextOne" onclick="handleAnswer()">Check</button>
         </div>
     </div>
     <div class="game-over-screen">
