Make logo refresh page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <div class="navbar">
         <div class="bar-icon" onclick="openNav()">&#9776;</div>
-        <div class="title">Fly-hoot<i class="far fa-paper-plane"></i></div>
+        <div class="title" onclick="refresh()">Fly-hoot<i class="far fa-paper-plane"></i></div>
     </div>
     <div class="landing-page">
         <div class="landing-modal">
