--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./public/stylesheets/navbar.css">
     <link rel="stylesheet" href="./public/stylesheets/landing.css">
     <link rel="stylesheet" href="./public/stylesheets/game.css">
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="mySidenav" class="sidenav">
@@ -70,8 +71,8 @@
         <div class="end-game-modal">
             <i class="fas fa-map-marked-alt"></i>
             <div class="right-section">
-                <div>You made it!</div>
-                <div>Your score is:</div>
+                <div class="end-text">You made it!</div>
+                <div class="end-text">Your score is:</div>
                 <div class="score"></div>
                 <button class="restartGame" onclick="startGame()">Let's fly again!</button>
             </div>
