--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="right-section">
                 <div class="landing-title">Hey there! Ready to fly through this trivia?</div>
                 <div class="landing-subtitle">There will be 10 random questions when you're ready for takeoff.</div>
-                <button class="startGame" onclick="masterControl(0)">Let's fly!</button>
+                <button class="startGame" onclick="control.startGame()">Let's fly!</button>
             </div>
             <i class="fas fa-paper-plane"></i>
         </div>
@@ -64,7 +64,7 @@
                 </label>
             </div>
             <div class="warning">Please select an answer.</div>
-            <button class="nextOne" onclick="masterControl(1)">Check</button>
+            <button class="nextOne" onclick="control.handleAnswer()">Check</button>
         </div>
     </div>
     <div class="game-over-screen">
@@ -74,7 +74,7 @@
                 <div class="end-text">You made it!</div>
                 <div class="end-text">Your score is:</div>
                 <div class="score"></div>
-                <button class="restartGame" onclick="masterControl(0)">Let's fly again!</button>
+                <button class="restartGame" onclick="control.startGame()">Let's fly again!</button>
             </div>
         </div>
     </div>
