Images and meta tags for LinkedIn feature

--- a/index.html
+++ b/index.html
@@ -2,15 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
-        integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta property="og:title" content="Fly-hoot" />
+    <meta property="og:image" content="./public/images/flyhoot-home.png" />
+    <meta property="og:description" content="Fly your way through trivia questions! A Javascript-based trivia game project for Tandem Coding Challenge." />
+    <meta property="og:url" content="https://winterfreddy.github.io/tandem-trivia-challenge/" />
+
     <title>Fly-hoot</title>
     <link rel="stylesheet" href="./public/stylesheets/layout.css">
     <link rel="stylesheet" href="./public/stylesheets/navbar.css">
     <link rel="stylesheet" href="./public/stylesheets/landing.css">
     <link rel="stylesheet" href="./public/stylesheets/game.css">
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
+        integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto&display=swap" rel="stylesheet">
+    
     <link rel="apple-touch-icon" sizes="180x180" href="./favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon_io/favicon-16x16.png">
